@@ -91,7 +91,7 @@ FunctionsToExport = 'Add-FontsToBcContainer', 'Add-GitToAlProjectFolder',
                'Get-BcContainerApiCompanyId', 'Get-BcContainerApp', 
                'Get-BcContainerAppInfo', 'Get-BcContainerAppRuntimePackage', 
                'Convert-BcAppsToRuntimePackages', 'Get-PlainText', 
-               'ConvertTo-HashTable', 'ConvertTo-OrderedDictionary', 
+               'ConvertTo-HashTable', 'ConvertTo-OrderedDictionary', 'ConvertTo-GitHubGoCredentials',
                'Get-BcContainerArtifactUrl', 'Get-BcContainerBcUser', 
                'Get-BcContainerCountry', 'Get-BcContainerDebugInfo', 
                'Get-BcContainerEula', 'Get-BcContainerEventLog', 
