@@ -347,6 +347,7 @@ Check-BcContainerHelperPermissions -Silent
 . (Join-Path $PSScriptRoot "Misc\Get-PlainText.ps1")
 . (Join-Path $PSScriptRoot "Misc\ConvertTo-HashTable.ps1")
 . (Join-Path $PSScriptRoot "Misc\ConvertTo-OrderedDictionary.ps1")
+. (Join-Path $PSScriptRoot "Misc\ConvertTo-GitHubGoCredentials.ps1")
 
 # Company Handling functions
 . (Join-Path $PSScriptRoot "CompanyHandling\Copy-CompanyInNavContainer.ps1")
